gui/3.9/graphstudio/write-queries.md
![TigerGraph Logo](https://www.tigergraph.com/wp-content/uploads/2020/05/TG_LOGO.svg) [Docs](https://docs.tigergraph.com/home)
Page 1[Prev](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)[Next](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)
Search by [Algolia](https://www.algolia.com/docsearch)
[Products](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)
TigerGraph Savanna
[TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/) [(_TigerGraph Cloud Classic_)](https://docs.tigergraph.com/cloud/main/start/overview)
TigerGraph Server
[TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
TigerGraph Suite
[GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Insights](https://docs.tigergraph.com/insights/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web)
Query Languages
[GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [GSQL Web Shell](https://docs.tigergraph.com/tigergraph-server/current/gsql-shell/web) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql)
AI & Graph Intelligence
[Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) [Hybrid Graph+Vector Search](https://docs.tigergraph.com/gsql-ref/current/vector/)
Connectors and APIs
[Data Connectors](https://docs.tigergraph.com/tigergraph-server/current/data-loading) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/) [JDBC Driver](https://github.com/tigergraph/ecosys/tree/master/tools/etl/tg-jdbc-driver)
Legacy Documentation
[ Legacy Documentation ](https://docs-legacy.tigergraph.com)
[Resources](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)
[Developer Site](https://dev.tigergraph.com/) [Community Forum](https://community.tigergraph.com/) [Knowledge Base](https://tigergraph.freshdesk.com/support/solutions)
[Download](https://dl.tigergraph.com)
[ TG Savanna](https://savanna.tgcloud.io)
### [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/3.9/intro/)
  *     * [Overview](https://docs.tigergraph.com/gui/3.9/intro/)
  *     * GraphStudio
      * [Overview](https://docs.tigergraph.com/gui/3.9/graphstudio/overview)
      * [Authentication](https://docs.tigergraph.com/gui/3.9/graphstudio/user-access-management)
      * [Design Schema](https://docs.tigergraph.com/gui/3.9/graphstudio/design-schema)
      * [Load Data](https://docs.tigergraph.com/gui/3.9/graphstudio/load-data)
        * [Data Transformation](https://docs.tigergraph.com/gui/3.9/graphstudio/data-transformation)
      * [Explore Graph](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/README)
        * [Graph Exploration Panel](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/graph-exploration-panel)
        * [Search for Vertices](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/search-for-vertices)
        * [Expand from Vertices](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/expand-from-vertices)
        * [Find Paths between Vertices](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/find-paths-between-vertices)
        * [Run GSQL Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/run-gsql-queries)
        * [Augment Visualization Result](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/augment-visualization-result)
      * Build Graph Patterns (Deprecated)
        * [Visual Query Builder](https://docs.tigergraph.com/gui/3.9/graphstudio/build-graph-patterns/visual-query-builder-overview)
        * [Visual Pattern Examples](https://docs.tigergraph.com/gui/3.9/graphstudio/build-graph-patterns/visual-pattern-examples)
      * [Write Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)
      * [Write openCypher Queries in TigerGraph](https://docs.tigergraph.com/gui/3.9/graphstudio/write-open-cypher-queries-in-tigergraph)
      * [Actions](https://docs.tigergraph.com/gui/3.9/graphstudio/actions)
      * [Migrate From Relational Database](https://docs.tigergraph.com/gui/3.9/graphstudio/migrate-from-relational-database)
      * [Export and Import Solution](https://docs.tigergraph.com/gui/3.9/graphstudio/export-and-import-solution)
      * [Keyboard Shortcuts](https://docs.tigergraph.com/gui/3.9/graphstudio/keyboard-shortcuts)
      * [Known Issues](https://docs.tigergraph.com/gui/3.9/graphstudio/known-issues)
      * [ZoomChart Update](https://docs.tigergraph.com/gui/3.9/graphstudio/graphstudio-zoomchart-update)
      * [GraphStudio Patent and Third Party Notice](https://docs.tigergraph.com/gui/3.9/graphstudio/patent-and-third-party-notice)
      * [License](https://docs.tigergraph.com/gui/3.9/graphstudio/license)
  *     * Admin Portal
      * [Overview](https://docs.tigergraph.com/gui/3.9/admin-portal/overview)
      * [Dashboard](https://docs.tigergraph.com/gui/3.9/admin-portal/dashboard)
      * [Monitor](https://docs.tigergraph.com/gui/3.9/admin-portal/monitoring/README)
        * [Queries](https://docs.tigergraph.com/gui/3.9/admin-portal/monitoring/queries)
        * [Logs](https://docs.tigergraph.com/gui/3.9/admin-portal/monitoring/log-viewer)
      * [Management](https://docs.tigergraph.com/gui/3.9/admin-portal/management/README)
        * [License](https://docs.tigergraph.com/gui/3.9/admin-portal/management/license)
        * [User Management](https://docs.tigergraph.com/gui/3.9/admin-portal/management/user-management)
        * [Components](https://docs.tigergraph.com/gui/3.9/admin-portal/components/README)
          * [GPE](https://docs.tigergraph.com/gui/3.9/admin-portal/components/gpe)
          * [GSQL](https://docs.tigergraph.com/gui/3.9/admin-portal/components/gsql)
          * [Application Server (GUI)](https://docs.tigergraph.com/gui/3.9/admin-portal/components/gui)
          * [Kafka](https://docs.tigergraph.com/gui/3.9/admin-portal/components/kafka)
          * [Nginx](https://docs.tigergraph.com/gui/3.9/admin-portal/components/nginx)
          * [RESTPP](https://docs.tigergraph.com/gui/3.9/admin-portal/components/restpp)
      * Security
        * [LDAP](https://docs.tigergraph.com/gui/3.9/admin-portal/security/ldap)
        * [Single Sign-on (SSO)](https://docs.tigergraph.com/gui/3.9/admin-portal/security/sso)
        * [Set up SSO with Azure Active Directory](https://docs.tigergraph.com/gui/3.9/admin-portal/security/sso-aad)
        * [Multi-factor Authentication](https://docs.tigergraph.com/gui/3.9/admin-portal/security/mfa)
      * [Query Output File Download](https://docs.tigergraph.com/gui/3.9/admin-portal/gsql-output-file)
      * [Known Issues](https://docs.tigergraph.com/gui/3.9/admin-portal/known-issues)
    * [Legacy Version Documentation](https://docs.tigergraph.com/gui/3.9/intro/legacy-tg-versions)


GraphStudio and Admin Portal 3.9
[Fully-Managed: Savanna](https://docs.tigergraph.com/savanna/main/overview/)
[Self-Managed: TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
[Install](https://docs.tigergraph.com/tigergraph-server/current/getting-started/) [Manage](https://docs.tigergraph.com/tigergraph-server/current/system-management/)
Tutorials & Guides
[GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/GSQL.md) [OpenCypher in GSQL](https://github.com/tigergraph/ecosys/blob/master/tutorials/Cypher.md) [Hybrid Vector Search](https://github.com/tigergraph/ecosys/blob/master/tutorials/VectorSearch.md)
Reference Manuals
[GSQL](https://docs.tigergraph.com/gsql-ref/4.2/intro/) [OpenCypher](https://docs.tigergraph.com/gsql-ref/current/opencypher-in-gsql/) [Vector](https://docs.tigergraph.com/gsql-ref/current/vector/) [REST APIs](https://docs.tigergraph.com/tigergraph-server/current/api/) [Configuration Parameters](https://docs.tigergraph.com/tigergraph-server/current/reference/configuration-parameters)
Visual Tools
[Develop: GraphStudio](https://docs.tigergraph.com/gui/4.2/intro/) [Administer: Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/) [Visualize: Insights](https://docs.tigergraph.com/insights/4.2/intro/)
AI & Data Science
[Graph Algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/) [TigerGraphX](https://github.com/tigergraph/ecosys/blob/master/tutorials/TigerGraphX.md) [ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/) [CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph DB](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/tigergraph-server/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/tigergraph-server/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/tigergraph-server/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/tigergraph-server/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/tigergraph-server/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/tigergraph-server/3.6/intro/)
  * [GSQL Language Reference](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gsql-ref/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gsql-ref/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gsql-ref/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gsql-ref/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gsql-ref/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gsql-ref/3.6/intro/intro)
  * [TigerGraph Savanna](https://docs.tigergraph.com/savanna/main/overview/)
  * [GraphStudio and Admin Portal](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/gui/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/gui/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/gui/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/gui/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/gui/3.9/intro/)
    * [3.6](https://docs.tigergraph.com/gui/3.6/graphstudio/overview)
  * [Insights](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.2 Pre](https://docs.tigergraph.com/insights/4.2/intro/)
    * [4.1](https://docs.tigergraph.com/insights/4.1/intro/)
    * [3.11](https://docs.tigergraph.com/insights/3.11/intro/)
    * [3.10](https://docs.tigergraph.com/insights/3.10/intro/)
    * [3.9](https://docs.tigergraph.com/insights/3.9/intro/)
  * [Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/)
    * [3.10](https://docs.tigergraph.com/graph-ml/3.10/intro/)
  * [pyTigerGraph](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.8](https://docs.tigergraph.com/pytigergraph/1.8/intro/)
    * [1.7](https://docs.tigergraph.com/pytigergraph/1.7/intro/)
    * [1.6](https://docs.tigergraph.com/pytigergraph/1.6/intro/)
  * [TigerGraph ML Workbench](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
    * [1.4](https://docs.tigergraph.com/ml-workbench/1.4/intro/)
  * [TigerGraph GraphQL Service](https://docs.tigergraph.com/graphql/3.9/)
    * [3.9](https://docs.tigergraph.com/graphql/3.9/)
  * [TigerGraph CoPilot](https://docs.tigergraph.com/tg-copilot/intro/)
    * [main](https://docs.tigergraph.com/tg-copilot/intro/)
  * [TigerGraph Cloud Classic](https://docs.tigergraph.com/cloud/main/start/overview)


[](https://docs.tigergraph.com/home/)
  * [GraphStudio and Admin Portal 3.9](https://docs.tigergraph.com/gui/3.9/intro/)
  * GraphStudio
  * [Write Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries)


[Edit this Page](https://github.com/tigergraph/gui-docs/edit/3.9/modules/graphstudio/pages/write-queries.adoc)
### Contents
  * [Query Editing Panel](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_query_editing_panel)
  * [Create a query or add a query from the algorithm library](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_create_a_query_or_add_a_query_from_the_algorithm_library)
  * [Save Query Draft](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_save_query_draft)
  * [Save as](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_save_as)
  * [Run Query in Interpreted Mode](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_query_in_interpreted_mode)
  * [Install Query](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_install_query)
  * [Run Query](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_query)
  * [Run Configuration](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_configuration)
  * [Delete Query](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_delete_query)
  * [Show Query Endpoint](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_show_query_endpoint)
  * [Download](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_download)
  * [Delete query draft](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_delete_query_draft)
  * [Install All Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_install_all_queries)
  * [Result Panel](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_result_panel)
  * [View schema](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_schema)
  * [Visualize graph result](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_visualize_graph_result)
  * [View JSON result](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_json_result)
  * [View table result](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_table_result)
  * [View logs](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_logs)
  * [Expand Panels](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_expand_panels)


# Write Queries
### Contents
  * [Query Editing Panel](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_query_editing_panel)
  * [Create a query or add a query from the algorithm library](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_create_a_query_or_add_a_query_from_the_algorithm_library)
  * [Save Query Draft](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_save_query_draft)
  * [Save as](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_save_as)
  * [Run Query in Interpreted Mode](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_query_in_interpreted_mode)
  * [Install Query](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_install_query)
  * [Run Query](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_query)
  * [Run Configuration](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_configuration)
  * [Delete Query](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_delete_query)
  * [Show Query Endpoint](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_show_query_endpoint)
  * [Download](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_download)
  * [Delete query draft](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_delete_query_draft)
  * [Install All Queries](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_install_all_queries)
  * [Result Panel](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_result_panel)
  * [View schema](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_schema)
  * [Visualize graph result](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_visualize_graph_result)
  * [View JSON result](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_json_result)
  * [View table result](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_table_result)
  * [View logs](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_logs)
  * [Expand Panels](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_expand_panels)


On the Write Queries page, you can write and run custom queries with GSQL.
You can also import pre-written graph data science algorithms from the [TigerGraph Graph Data Science Library](https://docs.tigergraph.com/graph-ml/3.10/intro/) to use with your own data set.
![write queries overview 3.3](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-overview_3.3.png)
The Write Query page is horizontally divided into two parts:
  * Query Editing Panel
  * Result, Log and Visualization Panel


## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_query_editing_panel)Query Editing Panel
The Query Editing panel is divided into two sub-panels, one for selecting a query and the other for displaying the query for editing. The Query Editor features syntax highlighting customized for the GSQL language and also performs real-time semantic checking.
Above the query editing pane is a toolbar with the following buttons, from left to right:
![write queries toolbar 3.3](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-toolbar_3.3.png)
  * **Expand/Collapse** : Expand or collapse the Query Editing panel to or from full page mode. The icon changes depending on whether the panel is currently expanded or collapsed.
  * **Save** : Save the current query draft.
  * **Save as** : Save the current query as a new query under a new name.
  * **Install** : Install the query into the database.
  * **Run** : Run the query. If the query is not installed, the query will run in interpreted mode. Note there is a performance penalty for running queries in interpreted mode.
    * **Run Configuration:** Set the query runtime configurations.
  * **Delete** : Delete the selected query and its draft.
  * **Show query endpoint:** Show the RESTful endpoint for executing the query. Only installed queries have endpoints.
  * **Download:** Download the query as a GSQL file.
  * **Discard query draft:** Delete the selected query draft.


### [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_create_a_query_or_add_a_query_from_the_algorithm_library)Create a query or add a query from the algorithm library
To create a new query from scratch, simply click on the "New GSQL Query" button ![upload file btn](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/upload_file_btn.png) in the bottom-right corner of the left sub-panel, and type in the name of the new query in the pop-up window.
By clicking **Choose from library** , you can import one or more of the pre-written [TigerGraph Graph Data Science Library algorithms](https://docs.tigergraph.com/graph-ml/3.10/intro/) to perform common graph data science tasks on your data such as pathfinding, community detection, classification, and more.
If you import the same query from the library more than once, installation will fail.   
---  
![create new query 3.6](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/create-new-query-3.6.png)
A query draft will be created with a template:
![write queries query draft 3.3](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-query-draft_3.3.png)
To edit an existing query, click on the query name in the list in the left panel.
### [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_save_query_draft)Save Query Draft
Click the "Save" button![save btn](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/save_btn.png)in the toolbar to save changes as a draft. A query draft is saved as is, regardless of syntax or semantic errors. Draft queries are not installed.
### [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_save_as)Save as
Click the "Save as" button to save the current query as a new query under a different name. After saving a query as another query, you will be redirected to the new query, and the original current will return to its last saved state.
### [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_query_in_interpreted_mode)Run Query in Interpreted Mode
You can run a query in interpreted mode if you have saved it as a draft without errors. Click the "Run" button ![start loading button](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/start-loading-button.png). Together with the query execution result, a warning message will appear to notify you of the performance concerns of running queries in interpreted mode. To speed up the query performance after you are satisfied with the query, follow the instructions in the next section to install the query.
### [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_install_query)Install Query
Saving a query enables the "Install Query" button ![publish btn](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/publish_btn.png). Click it to install the query, a process which will take about a minute. This improves performance compared to running a query in interpreted mode.
![install query progress](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/install_query_progress.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_query)Run Query
To run the query, click on the "Run" button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/run-installed-query.png) in the toolbar. If the query has no parameters for you to set, it will run immediately and the result will be shown in the Result panel.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-run-query-installed_3.3.png)
If the query does have input parameters, then the "Enter query parameters" pane will open on the left side of the query editing sub-panel. If there are several parameters, you may need to scroll down to see them all. After entering in all the values you wish to use, click the **Run query** button at the bottom of the pane.
The query will be executed, and the results will be shown in the Result Panel.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-run-install-query-with-param_3.3.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_run_configuration)Run Configuration
You can set runtime configurations of the GSQL query by clicking the small downward-pointing arrow button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/3.9.png) to the right of the Run Query button. A menu will appear with the **Run Configuration** button; click this button.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-use-default-timeout_3.3.png)
This opens the Run Configuration panel, where you can set the GSQL query timeout.
By default, it uses the timeout specified with the `RESTPP.Factory.DefaultQueryTimeoutSec` server parameter, which is 16 seconds. See the [TigerGraph Server Command Glossary](https://docs.tigergraph.com/tigergraph-server/4.2/reference/configuration-parameters#_restpp) for more information.
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_delete_query)Delete Query
Choose the query you want to delete and click on the "delete" button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/delete_forever.png). The query will be deleted permanently.
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_show_query_endpoint)Show Query Endpoint
After finishing writing the GSQL queries and installing the queries, you can access the queries via REST endpoints.
By clicking the "Show query endpoint" button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/endpoint.png) , you can see the format of the endpoint to access this query, so that you can integrate the query with your applications.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/show_query_endpoint.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_download)Download
You can download the selected query by clicking ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-toolbar-download-single-query_3.3.png) or download all your queries as a tar file by clicking ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-toolbar-download-all-queries_3.3.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_delete_query_draft)Delete query draft
You can delete your query draft by clicking the delete button at the end of the icon list:
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-toolbar-delete-query-draft_3.3.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_install_all_queries)Install All Queries
If you want to install all queries that you haven’t installed yet, click the "Install all queries" button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/install_all_queries.png) in the GSQL Queries toolbar.
This is useful if you have imported several queries from the Graph Data Science library and want to install them all at once before running them.
A pop-up window listing all queries to be installed appears:
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/install_all_query_list.png)
Click the **INSTALL** button. Installation may take several minutes depending on the number of queries to install.
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_result_panel)Result Panel
The Result panel shows the result of the last run query. Each query generates up to three types of result: visualized graph, JSON text, or log messages. On the left is a toolbar with buttons for changing the the panel size or for switching to a different type of result. The buttons, from top to bottom, are the following:
Menu option | Functionality  
---|---  
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/expand_panel.png) | Expand/Collapse: Expand or collapse the Result panel.  
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/schema-2.png) | View schema: Show the graph schema.  
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/visual-result.png) | Visualize graph result: Display query result in visualized graph.  
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/json-result.png) | View JSON result: Display query result in JSON format.  
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/table-result.png) | View table result: Display query result in a table.  
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/visualize_log.png) | View logs: Show the log for the most recent query run.  
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_schema)View schema
Viewing the graph schema makes it more convenient for developers to refer to the schema topology logic and easier to write correct GSQL queries.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/schema.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_visualize_graph_result)Visualize graph result
If the query execution result contains a graph structure, the result will be visualized in this panel as a graph. The panel is the same as the [Explore Graph panel](https://docs.tigergraph.com/gui/3.9/graphstudio/explore-graph/graph-exploration-panel). The only difference is that each time you run a query, the previous result will be erased. In Explore Graph the results are added incrementally.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/visualize-view.png)
Switch to the JSON Result panel to see the result in JSON format.
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_json_result)View JSON result
If there is no graph structure in the result, the result will be displayed in this panel as a JSON object.
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/json-view.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_table_result)View table result
You can display the query result as a table:
![table view](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/table-view.png)
Table rows can be sorted by any column with primitive type values. You can also download the table as a CSV file by clicking the download button next to the table name.
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_view_logs)View logs
If a query ran successfully, the Query Log will show a success message. If there was anything wrong when executing your query, such as invalid parameters or runtime errors, an error message will be shown in the Query Log panel:
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/log-view.png)
## [](https://docs.tigergraph.com/gui/3.9/graphstudio/write-queries#_expand_panels)Expand Panels
If you just want to focus on developing your query, or want to have more space to view your results, click the Expand button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/expand_panel.png) in either the Query Editing panel or the Result panel.
If you expand the Query Editing panel, it looks like this:
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/write-queries-expand-query-editor-panel_3.3.png)
If you expand the Result panel, it looks like this:
![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/expanded-panel.png)
When the panel is expanded, the Expand button becomes the Collapse button ![image](https://docs.tigergraph.com/gui/3.9/graphstudio/_images/collapse_btn.png). Clicking it will return the display to the split panel view.
3 Twin Dolphin Drive, Ste 225 Redwood City, CA 94065 
Copyright © 2025 TigerGraph
  * ## Resources
    * [Support](https://www.tigergraph.com/support/)
    * [Community](https://community.tigergraph.com/)
    * [Developer Site](https://dev.tigergraph.com/)
    * [Test Drive](https://testdrive.tigergraph.com/)
  * ## Social
    * [Linkedin](https://www.linkedin.com/company/tigergraph/)
    * [Facebook](https://www.facebook.com/TigerGraphDB/)
    * [Twitter](https://twitter.com/tigergraphdb)
  * ## Legal
    * [Privacy Policy](https://www.tigergraph.com/privacy-policy/)
    * [Terms of Use](https://www.tigergraph.com/terms/)
    * [Sitemap](https://docs.tigergraph.com/sitemap.xml)


